Feat: login & register activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#00B282</color>
+    <color name="colorPrimaryLight">#1ED5A3</color>
+    <color name="colorPrimaryDarker">#1ED5A3</color>
+    <color name="colorPrimaryRed">#FF557E</color>
+    <color name="colorPrimaryRedDarker">#9C1546</color>
+    <color name="colorwhite">#FFFFFF</color>
+    <color name="colorgray">#919191</color>
+    <color name="colorlightgray">#E3E3E3</color>
+    <color name="colorDarkGray">#494949</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorBlue">#151F7A</color>
+
 </resources>
