--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:text="Regjistrohu"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDarker"
         android:textColorHighlight="@color/colorPrimaryDarker"
         android:textColorLink="@color/colorPrimaryLight"
         android:textIsSelectable="true"
@@ -31,7 +31,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.994" />
+        app:layout_constraintVertical_bias="0.931" />
 
     <TextView
         android:id="@+id/textView"
@@ -44,10 +44,10 @@
         app:fontFamily="@font/ubuntu_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.119"
+        app:layout_constraintHorizontal_bias="0.338"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.994" />
+        app:layout_constraintVertical_bias="0.931" />
 
     <TextView
         android:id="@+id/logoioc"
@@ -59,7 +59,7 @@
         android:textColorHighlight="@color/colorPrimaryDarker"
         android:textColorHint="@color/colorPrimaryLight"
         android:textColorLink="@color/colorPrimary"
-        android:textSize="60sp"
+        android:textSize="70sp"
         app:fontFamily="@font/ubuntu_bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,14 +75,14 @@
         android:layout_marginTop="2dp"
         android:text="INVOICES ON CLICK"
         android:textColor="@color/colorwhite"
-        android:textSize="17sp"
+        android:textSize="24sp"
         app:fontFamily="@font/ubuntu_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.126"
+        app:layout_constraintHorizontal_bias="0.164"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logoioc"
-        app:layout_constraintVertical_bias="0.001" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnKyqu"
@@ -90,14 +90,14 @@
         android:layout_height="43dp"
         android:background="@drawable/button"
         android:text="Kyqu"
+        android:textAllCaps="false"
         android:textColor="@color/colorwhite"
         android:textSize="18sp"
-        android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.136"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logoiocpart2"
-        app:layout_constraintVertical_bias="0.069" />
+        app:layout_constraintVertical_bias="0.89" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
