Activity_login identifikuesi removed

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,7 +57,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.924" />
 
     <TextView
         android:id="@+id/txtRegjistrohu"
@@ -89,7 +89,8 @@
         android:id="@+id/txtemri"
         android:layout_width="310dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="316dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/input_field"
         android:ems="10"
         android:hint="Përdoruesi"
@@ -100,8 +101,9 @@
         android:textColorLink="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/txtid"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.584"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
         android:id="@+id/checkmbaje"
@@ -121,29 +123,12 @@
         app:layout_constraintTop_toBottomOf="@+id/txtpassword"
         app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
-        android:id="@+id/txtid"
-
-        android:layout_width="310dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="24dp"
-        android:background="@drawable/input_field"
-        android:ems="10"
-        android:hint="Numri Indentifikues"
-        android:inputType="textPersonName"
-        android:textColor="@color/colorDarkGray"
-        android:textColorHighlight="@color/colorPrimary"
-        android:textColorHint="@color/colorgray"
-        android:textColorLink="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/txtpassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/txtpassword"
         android:layout_width="310dp"
         android:layout_height="50dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="260dp"
         android:background="@drawable/input_field"
         android:ems="10"
@@ -155,8 +140,10 @@
         android:textColorLink="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.584"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtemri"
+        app:layout_constraintVertical_bias="0.253" />
 
     <Button
         android:id="@+id/btnkyqu"
