Main menu created

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/basic</item>
+        <item>@font/ubuntu</item>
         <item>@font/ubuntu_medium</item>
     </array>
 </resources>
