--- a/app/src/main/res/layout/activity_mainmenu.xml
+++ b/app/src/main/res/layout/activity_mainmenu.xml
@@ -18,7 +18,7 @@
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
