--- a/app/src/main/res/layout/fragment_btn_porosite.xml
+++ b/app/src/main/res/layout/fragment_btn_porosite.xml
@@ -109,11 +109,13 @@
         android:id="@+id/imageView"
         android:layout_width="119dp"
         android:layout_height="97dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/appicon"
         app:layout_constraintBottom_toTopOf="@+id/btn_newOrder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.692" />
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
