--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="colorPrimary">#00B282</color>
     <color name="colorPrimaryLight">#1ED5A3</color>
     <color name="colorPrimaryDarker">#1ED5A3</color>
-    <color name="colorPrimaryRed">#FF557E</color>
-    <color name="colorPrimaryRedDarker">#9C1546</color>
+    <color name="colorPrimaryRed">#37E4EA</color>
+    <color name="colorPrimaryRedDarker">#15529C</color>
     <color name="colorwhite">#FFFFFF</color>
     <color name="colorgray">#919191</color>
     <color name="colorlightgray">#E3E3E3</color>
