--- a/app/src/main/res/drawable/imagebutton.xml
+++ b/app/src/main/res/drawable/imagebutton.xml
@@ -5,8 +5,8 @@
     <solid android:color="#E1E1E1"/>
     <gradient
         android:angle="90"
-        android:endColor="#1ED5A3"
+        android:endColor="#FFFFFF"
 
-        android:startColor="#37F89E"/>
+        android:startColor="#FFFFFF"/>
 
 </shape>
