--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,7 +104,7 @@
         android:layout_marginEnd="85dp"
         android:layout_marginRight="85dp"
         android:layout_marginBottom="25dp"
-        android:background="@drawable/gradientbtn"
+        android:background="@drawable/button"
         android:text="Kyqu"
         android:textAllCaps="false"
         android:textColor="@color/colorwhite"
