--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,197 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-android:background="@drawable/mainfragmentbackground"
+    android:orientation="vertical"
+    android:background="@drawable/mainfragmentbackground"
+
     tools:context=".MainFragment">
 
-    <TextView
-        android:id="@+id/logoioc3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="I.O.C"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/colorDarkGray"
-        android:textColorHighlight="@color/colorPrimaryDarker"
-        android:textColorHint="@color/colorPrimaryLight"
-        android:textColorLink="@color/colorPrimary"
-        android:textSize="50sp"
-        app:fontFamily="@font/ubuntu_bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline4" />
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="282dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="221dp"
+        android:layout_marginBottom="228dp">
 
-    <ImageButton
-        android:id="@+id/img_shtoFakture"
-        android:layout_width="93dp"
-        android:layout_height="93dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginTop="192dp"
-        android:background="@drawable/gradientbtn"
-        android:src="@drawable/ic_addfakture"
-        android:tint="@color/colorwhite"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/imageslide1"
+                android:layout_width="237dp"
+                android:layout_height="227dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="6dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/imageslide1" />
+
+            <ImageView
+                android:id="@+id/imageslide2"
+                android:layout_width="235dp"
+                android:layout_height="227dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/imageslide2" />
+
+
+            <ImageView
+                android:id="@+id/imageslide3"
+                android:layout_width="235dp"
+                android:layout_height="227dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/imageslide3" />
+
+
+        </LinearLayout>
+    </HorizontalScrollView>
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="64dp"
-        android:text="Administrata"
-        android:textColor="@color/colorDarkGray"
-        android:textSize="13sp"
-        app:fontFamily="@font/ubuntu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/img_administrata"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <ImageButton
-        android:id="@+id/img_historia"
-        android:layout_width="93dp"
-        android:layout_height="93dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginTop="48dp"
-        android:background="@drawable/gradientbtn"
-        android:src="@drawable/ic_historia"
-        android:tint="@color/colorwhite"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="40dp"
-        android:text="Historia e Porosive"
-        android:textColor="@color/colorDarkGray"
-        android:textSize="13sp"
-        app:fontFamily="@font/ubuntu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/img_historia"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <ImageButton
-        android:id="@+id/img_shtoPorosi"
-        android:layout_width="93dp"
-        android:layout_height="93dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginTop="192dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginRight="48dp"
-        android:background="@drawable/gradientbtn"
-        android:src="@drawable/ic_shtoporosi"
-        android:tint="@color/colorwhite"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/img_shtoFakture"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginRight="64dp"
-        android:text="Shto Porosi"
-        android:textColor="@color/colorDarkGray"
-        android:textSize="13sp"
-        app:fontFamily="@font/ubuntu"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toBottomOf="@+id/img_shtoPorosi" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="328dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="508dp"
+        android:layout_width="362dp"
+        android:layout_height="63dp"
+        android:layout_below="@+id/textView14"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="21dp"
+        android:layout_marginLeft="21dp"
+        android:layout_marginTop="160dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginRight="27dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"
-        android:shadowColor="#CCCCCC"
-        android:text="Aplikacion për menaxhimin e fakturave dhe porosive online"
+        android:text="Aplikacion për menaxhimin e porosive dhe fakturave online"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+
         android:textColor="@color/colorDarkGray"
-        android:textIsSelectable="false"
-        android:textSize="16sp"
-        app:fontFamily="@font/ubuntu_medium"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline2" />
+        android:textSize="17sp"
+        app:fontFamily="@font/ubuntu_medium" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="136dp"
+        android:layout_marginLeft="136dp"
+        android:layout_marginTop="82dp"
+        android:layout_marginEnd="153dp"
+        android:layout_marginRight="153dp"
+        android:gravity="center_horizontal"
+        android:text="I.O.C"
+        android:textAlignment="center"
+        android:textColor="@color/colorDarkGray"
+        android:textSize="50sp"
+        app:fontFamily="@font/ubuntu_medium" />
+
+    <ImageButton
+        android:id="@+id/imgShtoPorosi"
+        android:layout_width="82dp"
+        android:layout_height="82dp"
+
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="152dp"
+        android:layout_marginRight="152dp"
+        android:layout_marginBottom="60dp"
+        android:background="@drawable/buttonwhite2"
+        android:src="@drawable/ic_shtoporosi"
+        android:tint="@color/colorwhite" />
 
     <ImageButton
         android:id="@+id/img_administrata"
-        android:layout_width="93dp"
-        android:layout_height="93dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginLeft="52dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginRight="48dp"
-        android:background="@drawable/gradientbtn"
+        android:layout_width="82dp"
+        android:layout_height="82dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="78dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginRight="71dp"
+        android:layout_marginBottom="59dp"
+        android:background="@drawable/buttonwhite2"
         android:src="@drawable/ic_administrata"
-        android:tint="@color/colorwhite"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/img_historia"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        android:tint="@color/colorwhite" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginRight="90dp"
-        android:text="Shto Fakturë"
-        android:textColor="@color/colorDarkGray"
-        android:textSize="13sp"
-        app:fontFamily="@font/ubuntu"
-        app:layout_constraintEnd_toStartOf="@+id/textView8"
-        app:layout_constraintHorizontal_bias="0.375"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/img_shtoFakture" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginBottom="39dp"
+        android:text="Shto Fakture"
+        android:textColor="@color/colorwhite"
+        app:fontFamily="@font/ubuntu_medium" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
+    <TextView
+        android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="38dp" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="69dp"
+        android:layout_marginRight="69dp"
+        android:layout_marginBottom="39dp"
+        android:text="Administrata"
+        android:textColor="@color/colorwhite"
+        app:fontFamily="@font/ubuntu_medium" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="38dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="80dp" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
