--- a/app/src/main/res/drawable/buttonwhite.xml
+++ b/app/src/main/res/drawable/buttonwhite.xml
@@ -4,6 +4,6 @@
     <solid android:color="@android:color/transparent" />
     <stroke
         android:width="3dp"
-        android:color="#393939" />
+        android:color="@color/colorPrimaryLight" />
 
 </shape>
